chore: update dependencies and remove diagnostic logging